feat(inference): land image-only recovery and secure admission